--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -4517,9 +4517,9 @@ var maxProduct = function(nums) {
     let ans=nums[0];
     for (let i=1;i<n;i++){
         let mx=maxF,mn=minF;
-        maxF=Math.max(mx*nums[i], Math.max(nums[i],mn*nums[i]));
+        maxF=Math.max(mx*nums[i], nums[i], mn*nums[i]);
         ans = Math.max(maxF,ans);
-        minF=Math.min(mn*nums[i], Math.min(nums[i],mx*nums[i]));
+        minF=Math.min(mx*nums[i], nums[i], mn*nums[i]);
     }
     return ans;
 };
@@ -4527,6 +4527,7 @@ var maxProduct = function(nums) {
 let nums=[2,3,-2,4];
 let result=maxProduct(nums);
 console.log(result);
+
 ```
 
 
