--- a/面试学习题目/前端面试_17_浏览器部分.md
+++ b/面试学习题目/前端面试_17_浏览器部分.md
@@ -1763,204 +1763,48 @@ F**irefox 浏览器：**Gecko 内核，俗称 Firefox 内核
 
 ---
 
-## 3.3 请问你了解ajax请求吗？
+##  从存储位置看，浏览器缓存分为哪几种？
 
-传统请求方法的缺点:
+从存储位置来看，浏览器缓存一共分为四种，并且各自有优先级，当依次查找缓存且都没有命中的时候，才会去请求网络。
 
-传统的web请求是用户触发一个http请求服务器，服务器收到后，响应到用户，并返回一个新的页面，每当服务器处理客户端请求时，客户都只能空闲等待，哪怕只是一次很小的交互，都要返回一个完整的HTML页，并且浪费时间和带宽去重新读取整个页面，这导致了用户界面的响应比本地应用慢得多
+- Service Worker
+- Memory Cache
+- Disk Cache
+- Push Cache
 
-ajax 是一种用于创建快速页的技术，**通过在后台与服务器进行少量数据交换，可使网页实现异步更新**，**在不重新加载整个网页的情况下，对网页的某部分进行更新**
+### Service Worker
 
-ajax请求步骤：
+Service Worker 是运行在浏览器背后的独立线程，一般可以用来实现缓存功能。**使用 Service Worker的话，传输协议必须为 HTTPS**。因为 Service Worker 中涉及到请求拦截，所以必须使用 HTTPS 协议来保障安全。Service Worker 的缓存与浏览器其他内建的缓存机制不同，它可以让我们自由控制缓存哪些文件、如何匹配缓存、如何读取缓存，并且缓存是持续性的。
 
-a、创建XMLHTTPRequest对象（通过 XMLHttpRequest 可以在不刷新页面的情况下请求特定 URL，获取数据，常用于ajax请求）
+Service Worker 实现缓存功能一般分为三个步骤：
 
-b、使用open方法设置和服务器的交互信息
+- 首先需要先注册 Service Worker
+- 然后监听到 install 事件以后就可以缓存需要的文件
+- 那么在下次用户访问的时候就可以通过拦截请求的方式查询是否存在缓存，存在缓存的话就可以直接读取缓存文件，否则就去请求数据。
+- 当 Service Worker 没有命中缓存的时候，我们需要去调用 fetch 函数获取数据。也就是说，如果我们没有在 Service Worker 命中缓存的话，会根据缓存查找优先级去查找数据。**但是不管我们是从 Memory Cache 中还是从网络请求中获取的数据，浏览器都会显示我们是从 Service Worker 中获取的内容。**
 
-c、设置发送的数据，开始和服务器端交互
+### Memory Cache
 
-d、注册事件
+Memory Cache 也就是内存中的缓存，主要包含的是当前中页面中已经抓取到的资源,例如页面上已经下载的样式、脚本、图片等。读取内存中的数据肯定比磁盘快,内存缓存虽然读取高效，可是缓存持续性很短，会随着进程的释放而释放。 一旦我们关闭 Tab 页面，内存中的缓存也就被释放了。
 
-e、更新界面
+内存缓存在缓存资源时并不关心返回资源的HTTP缓存头Cache-Control是什么值，同时资源的匹配也并非仅仅是对URL做匹配，还可能会对Content-Type，CORS等其他特征做校验。
 
----
+### Disk Cache
 
-## 3.4 请问ajax是如何发请求的？
+Disk Cache 也就是存储在硬盘中的缓存，读取速度慢点，但是什么都能存储到磁盘中，比之 Memory Cache 胜在容量和存储时效性上。它会根据 HTTP Herder 中的字段判断哪些资源需要缓存，哪些资源可以不请求直接使用，哪些资源已经过期需要重新请求。并且即使在跨站点的情况下，相同地址的资源一旦被硬盘缓存下来，就不会再次去请求数据。**绝大部分的缓存都来自 Disk Cache。**
 
-get请求：
+### Push Cache
 
-```js
-//一、创建XMLHTTPRequest对象
-var ajax = new XMLHttpRequest();
+Push Cache（**推送缓存**）是 HTTP/2 中的内容，当以上三种缓存都没有命中时，它才会被使用。**它只在会话（Session）中存在，一旦会话结束就被释放，并且缓存时间也很短暂**，在Chrome浏览器中只有5分钟左右，同时它也并非严格执行HTTP头中的缓存指令。他有如下的一些特性：
 
-//二、设置请求url参数，（请求的类型，请求的url，可以带参数，动态的传递参数starName到服务端）
-ajax.open('get','getStar.php?starName='+name);
+- 所有的资源都能被推送，并且能够被缓存,但是 Edge 和 Safari 浏览器支持相对比较差。
+- Push Cache 中的缓存只能被使用一次
+- 可以给其他域名推送资源
+- 浏览器可以拒绝接受已经存在的资源推送
+- 一旦连接被关闭，Push Cache 就被释放
+- 可以推送 no-cache 和 no-store 的资源
+- 多个页面可以使用同一个HTTP/2的连接，也就可以使用同一个Push Cache。这主要还是依赖浏览器的实现而定，出于对性能的考虑， 有的浏览器会对相同域名但不同的tab标签使用同一个HTTP连接。
 
-//三、发送请求
-ajax.send();
 
-//四、注册事件onreadystatechange状态改变就会调用
-ajax.onreadystatechange = function () {
-    if (ajax.readyState==4 && ajax.status==200) {
-	//五、if条件为true，数据请求成功，并且请求的页面是存在的　　　　           
-    	console.log(ajax.responseText);
-    }
-}
-```
-
-关于if判断语句中的状态值：
-
-**status：**服务器的Http状态码，若是200，则表示OK，404，表示为未找到
-
-**readyState属性**有五个状态值：
-
-0：uninitialized：未初始化，已经创建了XMLHttpRequest对象但是未初始化
-
-1：loading：已经开始准备好要发送了
-
-2：loaded,：已经发送，但是还没有收到响应
-
-3：interactive：正在接受响应，但是还没接收完
-
-4：completed：接受响应完毕
-
-**post请求：**
-
-```js
-//一、创建XMLHTTPRequest对象
-var ajax = new XMLHttpRequest();
-
-//二、设置请求的类型及url
-//post请求一定要添加请求头才行不然会报错
-ajax.setRequestHeader("Content-type","application/x-www-form-urlencoded");
-ajax.open('post', '02.post.php' );
-
-//三、发送请求
-ajax.send('name=fox&age=18');
-
-ajax.onreadystatechange = function () {
-// 判断服务器是否正确响应
-    if (ajax.readyState == 4 && ajax.status == 200) {
-        console.log(ajax.responseText);
-    } 
-};
-```
-
-可进行一定的封装：
-
-```js
-function ajax_method(url,data,method,success) {
-    //创建XMLHTTPRequest对象
-    var ajax = new XMLHttpRequest();
-    // get请求
-    if (method=='get') {
-        if (data) {
-            // 如果有值
-            url+='?';
-            url+=data;
-        }else{
-        }
-        // 设置请求方法以及url
-        ajax.open(method,url);
-        // 发送请求
-        ajax.send();
-    }else{
-        // post请求，url是不需要改变
-        ajax.open(method,url);
-        // 需要设置请求报文
-        ajax.setRequestHeader("Content-type","application/x-www-form-urlencoded");
-        // 判断data，send发送数据
-        if (data) {
-            // 如有值从send发送
-            ajax.send(data);
-        }else{
-            //直接发送
-            ajax.send();
-        }
-    }
-    // 注册事件
-    ajax.onreadystatechange = function () {
-        // 在事件中获取数据，并修改显示界面
-        if (ajax.readyState==4 && ajax.status==200) {
-            // console.log(ajax.responseText);
-            // 将数据让外面可以使用
-            // return ajax.responseText;
-            // 当onreadystatechange被调用时，证明数据请求成功
-            // ajax.responseText;
-            // 可外面传入一个 function 作为参数 success
-            success(ajax.responseText);
-        }
-    }
-}
-```
-
-Promise版本的ajax请求：
-
-```js
-var getJSON = function(url) {
-    var promise = new Promise(function(resolve, reject) {
-        var client = new XMLHttpRequest();
-        client.open("GET", url);
-        client.onreadystatechange = handler;
-        client.responseType = "json";
-        client.setRequestHeader("Accept", "application/json");
-        client.send();
-    
-        function handler() {
-            if (this.readyState !== 4) {
-                return;      
-            }
-            if (this.status === 200) {
-                resolve(this.response);      
-            } else {
-                reject(new Error(this.statusText));      
-            }    
-        };  
-    });
-    return promise;
-};  
-  
-getJSON("http://rap.taobao.org/mockjs/9768/Rap/get").then(function(response) {
-    console.log('Contents: ',response);
-}, function(error) {
-    console.error('出错了', error);
-});
-```
-
-----
-
-## 3.5 请问ajax、axios、fetch请求有何区别？
-
-- **axios**
-
-**一个基于Promise 用于浏览器和 nodejs 的 HTTP 客户端**，本质上也是对原生XMLHTTPRequest对象的封装，只不过它是Promise的实现版本，符合最新的ES规范，具有以下特征：
-
-a、从浏览器中创建 XMLHttpRequest
-
-b、支持 Promise API
-
-c、客户端防止CSRF
-
-d、提供了一些并发请求的接口（实际开发中方便了很多的操作）
-
-e、从 node.js 创建 http 请求
-
-f、拦截请求和响应
-
-g、转换请求和响应数据
-
-h、支持取消请求
-
-i、自动转换JSON数据
-
-- **fetch**
-
-号称是ajax替代品，在ES6时产生，是基于promise设计的。相比ajax，**fetch代码结构更加简单，参数类型与ajax类似**，但fetch不是ajax的进一步封装，而是原生js，没有使用XMLHttpRequest对象
-
-**fetch优点：**
-
-a、符合关注分离，没有将输入、输出和用事件来跟踪的状态混杂在一个对象里
-
-b、写法更加简洁方便
 
 ---
