--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -11690,6 +11690,50 @@ group by player_id
 
 ---
 
+## 513. 找树左下角的值
+
+给定一个二叉树的 根节点 root，请找出该二叉树的 最底层 最左边 节点的值。
+
+假设二叉树中至少有一个节点。
+
+```
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {number}
+ */
+var findBottomLeftValue = function(root) {
+    let ans = root.val;
+    let maxHeight = 1;
+    const dfs = (root, height) => {
+        if (!root) {
+            return;
+        }
+        height++;
+        //因为我们先遍历左子树，然后再遍历右子树，所以对同一高度的所有节点，最左节点肯定是最先被遍历到的。
+        dfs(root.left, height);
+        dfs(root.right, height);
+        if (height > maxHeight) {
+            maxHeight = height;
+            ans = root.val;
+        }
+    }
+    dfs(root, 0);
+    return ans;
+};
+```
+
+
+
+----
+
 ## 520. 检测大写字母
 
 我们定义，在以下情况时，单词的大写用法是正确的：
