--- a/面试学习题目/前端面试_19_数据结构部分.md
+++ b/面试学习题目/前端面试_19_数据结构部分.md
@@ -36,3 +36,22 @@
     - 链表不需要移动元素，只需要修改指针
 
 ------
+
+## 什么是空间复杂度？
+
+空间复杂度是对一个算法在运行过程中临时占用存储空间的大小。
+
+
+
+----
+
+##  介绍你知道的一些数据结构
+
+- 栈：一种特殊串联形式的抽象数据类型，可由链表或数组实现，通过链表或数组的栈顶（Top）指针对数据进行压栈（Push）和出栈（Pop）操作，其特点是LIFO。
+- 队列：先进先出（FIFO）的线性表，一般用链表和数组来实现，只允许在后端（back or rear）插入，在前端（front）删除。
+- 数组：由相同元素的集合所组成的数据结构，存储在一块连续的内存单元，根据元素的索引可以计算出该元素对应的存储地址。
+- 链表：由一连串节点组成，每个节点包含任意的实例数据和一个或两个用来指向下一个/上一个节点位置的链接。
+- 树：实现抽象数据类型的数据结构，如：二叉树、霍夫曼树。
+- 图：表示物件与物件之间的关系，图论的基本研究对象。
+- 堆：是计算机科学中一种特别的树状数据结构，也是一种特殊的二叉树。
+- 散列表：根据键（key）直接访问内存存储位置的一种数据结构，通过计算一个关于键值的函数，将所需查询的数据映射到表中的一个位置来访问记录，映射函数叫做散列函数，存放记录的数组叫散列表（散列函数和哈希冲突是实现散列表最重要的两个环节）。
