--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -2486,6 +2486,78 @@ console.log(result);
 
 
 ---
+## 30. 串联所有单词的子串
+
+给定一个字符串 s 和一些 长度相同 的单词 words 。找出 s 中恰好可以由 words 中所有单词串联形成的子串的起始位置。
+
+注意子串要与 words 中的单词完全匹配，中间不能有其他字符 ，但不需要考虑 words 中单词串联的顺序。
+
+
+提示：
+
+1 <= s.length <= 104
+s 由小写英文字母组成
+1 <= words.length <= 5000
+1 <= words[i].length <= 30
+words[i] 由小写英文字母组成
+
+```js
+/**
+ * @param {string} s
+ * @param {string[]} words
+ * @return {number[]}
+ */
+var findSubstring = function(s, words) {
+    let ans = [];
+    let i  = 0;
+    let n = words.length;
+    let m = words[0].length;
+    let lenS = s.length;
+    for (let i = 0; i < m; i++) {
+        if (i + n * m > lenS) {
+            break;
+        }
+        const differ = new Map();
+        for (let j = 0; j < n; j++) {
+            let word = s.substring(i + j * m, i + (j + 1) * m);
+            differ.set(word, (differ.get(word) || 0) + 1);
+        }
+        for (let word of words) {
+            differ.set(word, (differ.get(word) || 0) - 1);
+            if (differ.get(word) === 0) {
+                differ.delete(word);
+            }
+        }
+        for (let start = i; start < lenS - n * m + 1; start += m) {
+            if (start !== i) {
+                let word = s.substring(start + (n - 1) * m, start + n * m);
+                differ.set(word, (differ.get(word) || 0) + 1);
+                if (differ.get(word) === 0) {
+                    differ.delete(word);
+                }
+                word = s.substring(start - m, start);
+                differ.set(word, (differ.get(word) || 0) - 1);
+                if (differ.get(word) === 0) {
+                    differ.delete(word);
+                }
+            }
+            if (differ.size === 0) {
+                ans.push(start);
+            }
+        }
+    }
+    return ans;
+};
+
+let s = "barfoofoobarthefoobarman", words = ["bar","foo","the"];
+let result = findSubstring(s, words);
+console.log(result);
+```
+
+
+
+----
+
 ## 35. 搜索插入位置
 
 给定一个排序数组和一个目标值，在数组中找到目标值，并返回其索引。如果目标值不存在于数组中，返回它将会被按顺序插入的位置。
