--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -11802,6 +11802,56 @@ var findBottomLeftValue = function(root) {
 };
 ```
 
+----
+
+## 515. 在每个树行中找最大值
+
+给定一棵二叉树的根节点 root ，请找出该二叉树中每一层的最大值。
+
+ 提示：
+
+二叉树的节点个数的范围是 [0,104]
+-231 <= Node.val <= 231 - 1
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ */
+var largestValues = function(root) {
+    if (root === null) {
+        return [];
+    }
+    let ans = [];
+    let arr = [root];
+    while(arr.length > 0) {
+        let n = arr.length;
+        let maxValue = -Number.MAX_SAFE_INTEGER;
+        while(n > 0) {
+            let node = arr.shift();
+            maxValue = Math.max(maxValue, node.val);
+            if (node.left !== null) {
+                arr.push(node.left);
+            }
+            if (node.right !== null) {
+                arr.push(node.right);
+            }
+            n--;
+        }
+        ans.push(maxValue)
+    }
+    return ans;
+};
+```
+
 
 
 ----
@@ -14081,6 +14131,71 @@ var fallingSquares = function(positions) {
 
 
 ----
+
+## 710. 黑名单中的随机数
+
+给定一个整数 n 和一个 无重复 黑名单整数数组 blacklist 。设计一种算法，从 [0, n - 1] 范围内的任意整数中选取一个 未加入 黑名单 blacklist 的整数。任何在上述范围内且不在黑名单 blacklist 中的整数都应该有 同等的可能性 被返回。
+
+优化你的算法，使它最小化调用语言 内置 随机函数的次数。
+
+实现 Solution 类:
+
+Solution(int n, int[] blacklist) 初始化整数 n 和被加入黑名单 blacklist 的整数
+int pick() 返回一个范围为 [0, n - 1] 且不在黑名单 blacklist 中的随机整数
+
+提示:
+
+1 <= n <= 109
+0 <= blacklist.length <= min(105, n - 1)
+0 <= blacklist[i] < n
+blacklist 中所有值都 不同
+ pick 最多被调用 2 * 104 次
+
+```js
+/**
+ * @param {number} n
+ * @param {number[]} blacklist
+ */
+var Solution = function(n, blacklist) {
+    this.b2w = new Map();
+    const m = blacklist.length;
+    this.bound = n - m;
+    const black = new Set();
+    for (let b of blacklist) {
+        if (b >= this.bound) {
+            black.add(b);
+        }
+    }
+    let w = this.bound;
+    for (let b of blacklist) {
+        if (b < this.bound) {
+            while (black.has(w)) {
+                ++w;
+            }
+            this.b2w.set(b, w);
+            ++w;
+        }
+    }
+};
+
+/**
+ * @return {number}
+ */
+Solution.prototype.pick = function() {
+    let x = Math.floor(Math.random() * this.bound);
+    return this.b2w.get(x) || x;
+};
+
+/**
+ * Your Solution object will be instantiated and called as such:
+ * var obj = new Solution(n, blacklist)
+ * var param_1 = obj.pick()
+ */
+```
+
+
+
+---
 
 ## 713. 乘积小于 K 的子数组
 
