--- a/Vue/尚品汇项目学习笔记.md
+++ b/Vue/尚品汇项目学习笔记.md
@@ -294,15 +294,17 @@ Footer组件显示|隐藏，选择v-show|v-if
 
 ## 路由的跳转
 
-路由的跳转就两种形式：声明式导航（router-link：务必要有to属性）
+  跳转路由的2种基本方式
 
-​          编程式导航push||replace
+​    声明式: `<router-link to="">` 声明式导航（router-link：务必要有to属性）
 
-编程式导航更好用：因为可以书写自己的业务逻辑
+​    编程式: `this.$router.push()/replace()`
+
+ 编程式导航更好用：因为可以书写自己的业务逻辑
 
 
 
-9）路由传参
+路由传参
 
 params参数：路由需要占位，程序就崩了，属于URL当中一部分
 
@@ -335,7 +337,16 @@ this.$router.push({name: "search", params:{keyword: "abc" || undefined}, query:{
      1:路由传递参数（对象写法）path是否可以结合params参数一起使用?
      不可以：不能这样书写，程序会崩掉
 
+不可以用path和params配置的组合, 只能用name和params配置的组合
+
+query配置可以与path或name进行组合使用
+
+
+
 ​      2:如何指定params参数可传可不传? 
+
+`path: '/search/:keyword?'`
+
  如果路由要求传递路由参数，但是你就不传参数，URL会出现问题
  如何指定params参数可以传递、或者不传递，在配置路由的时候，在占位后面加一个问号
 
@@ -357,12 +368,21 @@ this.$router.push({name: "search", params:{keyword: "abc" || undefined}, query:{
 this.$router.push({name: "search", params:{keyword: "abc" || undefined}, query:{keyword:this.keyword}});
 ```
 
+
+
   4:如果指定name与params配置, 但params中数据是一个"", 无法跳转，路径会出问题
 
+解决1: 不指定params
+
+解决2: 指定params参数值为undefined
 
 
 
  5: 路由组件能不能传递props数据?
+
+ 可以: 可以将query或且params参数映射/转换成props传递给路由组件对象
+
+实现: props: (route)=>({keyword1:route.params.keyword, keyword2: route.query.keyword })
 
 ```js
  //新增配置项:props,给路由组件传递props参数
@@ -393,7 +413,22 @@ this.$router.push({name: "search", params:{keyword: "abc" || undefined}, query:{
 这种异常，对于程序没有任何影响的。
 
 为什么会出现这种现象:
-由于vue-router最新版本3.5.2，引入了promise，当传递参数多次且重复，会抛出异常，因此出现上面现象,
+
+vue-router3.1.0之后, 引入了push()的promise的语法, 如果没有通过参数指定回调函数就返回一个promise来指定成功/失败的回调, 且内部会判断如果要跳转的路径和参数都没有变化, 会抛出一个失败的promise，当传递参数多次且重复，会抛出异常，因此出现上面现象,
+
+解决1: 在跳转时指定成功或失败的回调函数, 通过catch处理错误
+
+```js
+// catch()处理错误
+this.$router.push(`/search/${this.keyword}`).catch(() => {})
+// 指定成功的回调函数
+this.$router.push(`/search/${this.keyword}`, () => {})
+// 指定失败的回调函数
+this.$router.push(`/search/${this.keyword}`, undefined, () => {})
+
+```
+
+
 
 第一种解决方案：是给push函数，传入相应的成功的回调与失败的回调
 
@@ -406,8 +441,6 @@ console.log(reuslt);
 
 第一种解决方案可以暂时解决当前问题，但是以后再用push|replace还是会出现类似现象，因此我们需要从‘根’治病；
 
-
-
 ```js
 //问题1:push方法,里面this是谁? vueRouter类的实例
 //this: 当前组件实例
@@ -416,6 +449,43 @@ this.$router.push({name:'search',params:{keyword:this.keyword}});
 let result = this.$router.push;
 result({name:'search',params:{keyword:this.keyword}})
 ```
+
+
+
+解决2: 修正Vue原型上的push和replace方法 (优秀)
+
+```js
+// 缓存原型上的push函数
+const originPush = VueRouter.prototype.push
+const originReplace = VueRouter.prototype.replace
+// 给原型对象上的push指定新函数函数
+VueRouter.prototype.push = function (location, onComplete, onAbort) {
+  // 判断如果没有指定回调函数, 通过call调用源函数并使用catch来处理错误
+  if (onComplete===undefined && onAbort===undefined) {
+    return originPush.call(this, location, onComplete, onAbort).catch(() => {})
+  } else { // 如果有指定任意回调函数, 通过call调用源push函数处理
+    originPush.call(this, location, onComplete, onAbort)
+  }
+}
+VueRouter.prototype.replace = function (location, onComplete, onAbort) {
+  if (onComplete===undefined && onAbort===undefined) {
+    return originReplace.call(this, location, onComplete, onAbort).catch(() => {})
+  } else {
+    originReplace.call(this, location, onComplete, onAbort)
+  }
+}
+
+```
+
+
+
+路由的跳转与传参
+
+第一种声明式导航:为什么使用router-link组件的时候，会出现卡顿那？
+router-link是一个组件：相当于VueComponent类的实例对象，一瞬间
+new VueComponent很多实例（1000+），很消耗内存，因此导致卡顿。
+
+
 
 
 
@@ -437,5 +507,235 @@ result({name:'search',params:{keyword:this.keyword}})
 
 ```
 
+```
+
+
+
+
+
+## axios二次封装
+
+AJAX:客户端可以'敲敲的'向服务器端发请求，在页面没有刷新的情况下，实现页面的局部更新。
+XMLHttpRequest、$、fetch、axios
+
+跨域:如果多次请求协议、域名、端口号有不同的地方，称之为跨域
+JSONP、CROS、代理
+
+工作的时候src目录下的API文件夹，一般关于axios二次封装的文件
+
+进度条：nprogress模块实现进度条功能
+
+工作的时候，修改进度条的颜色，修改源码样式.bar类名的
+
+```bash
+cnpm i --save axios
+cnpm i --save nprogress
+```
+
+```js
+  //配置代理跨域
+  devServer: {
+    proxy: {
+      "/api": {
+        // 只对请求路由以/api开头的请求进行代理转发
+        target: `http://gmall-h5-api.atguigu.cn`, // 转发的目标url
+        changeOrigin: true   // 支持跨域
+      }
+    }
+  }
+})
+```
+
+```js
+//获取商品分类的数据
+export const reqBaseCategoryList = () => {
+   //箭头函数可以在程序任意地方使用,箭头函数返回即为服务器的数据
+   //下面箭头函数返回值：返回的是什么? promise,即为返回服务器的数据
+   //return关键字，千万别忘记书写，如果忘记书写，你在任意地方获取的都是undeinfed
+   return requests({method: 'get', url: '/product/getBaseCategoryList'});
+}
+```
+
+
+
+```js
+  async mounted() {
+    const result = await reqBaseCategoryList();
+    console.log("result", result);
+  }
+```
+
+
+
+## 使用vuex管理状态
+
+vuex:Vue官方提供的一个插件，插件可以管理项目共用数据。
+vuex：书写任何项目都需要vuex？
+项目大的时候，需要有一个地方‘统一管理数据’即为仓库store
+
+当项目比较大，组件通信数据比较复杂，这种情况在使用vuex
+
+Vuex是插件，通过vuex仓库进行存储项目的数据
+
+Vuex基本使用:
+
+```bash
+cnpm i --save vuex@3
+```
+
+vuex模块式开发【modules】
+
+由于项目体积比较大，你向服务器发请求的接口过多，服务器返回的数据也会很多，如果还用以前的方式存储数据，导致vuex中的state数据格式比较复杂。采用vuex模块式管理数据。
+
+Vuex核心概念:state、actions、mutations、getters、modules
+
+
+
+## 商品分类三级联动展示动态数据
+
+以前基础课程的时候，发请求操作如下：在组件的mounted中书写axios.get||post,获取到数据存储到组件的data当中进行使用
+
+你们写项目的时候发请求在哪里发呀？
+mounted|created:都可以
+
+mounted：模板已经变为真是DOM【只不过没有数据，显示空白】，因为ajax是异步，需要时间的。
+created：稍微好那么一丢丢（不算啥）
+
+
+
+## 优化项目
+
+v-if|v-show
+按需加载
+函数防抖与节流
+按需加载:对于loadsh插件，它里面封装的函数功能很多
+import _ from lodash 相当于把全部功能引入进来，但是我们只是需要节流。
+
+```bash
+cnpm i --save lodash
+```
+
+
+
+```js
+  //底下的这种写法:是将lodash全部API引入,将来项目打包的时候，体积会大一些
+  // import _ from "lodash";
+  //引入手段:按需引入
+  import throttle from "lodash/throttle"
+```
+
+
+
+
+
+函数防抖与节流*******面试题
+
+正常：事件触发非常频繁，而且每一次的触发，回调函数都要去执行（如果时间很短，而回调函数内部有计算，那么很可能出现浏览器卡顿）
+
+防抖：前面的所有的触发都被取消，最后一次执行在规定的时间之后才会触发，也就是说如果连续快速的触发,只会执行最后一次
+
+节流：在规定的间隔时间范围内不会重复触发回调，只有大于这个时间间隔才会触发回调，把频繁触发变为少量触发
+
+需要把防抖与节流的原理，通过JS实现【闭包 + 延迟器】
+
+
+
+## 搜索模块中的三级联动与过渡动画
+
+
+1.1在home模块当中，使用了一个功能三级联动功能---->[typeNav]
+1.2在search模块当中，也使用三级联动的功能------->[typeNav]
+1.3注意的事项
+注意1：以后在开发项目的时候，如果发现某一个组件在项目当中多个地方出现频繁的使用
+咱们经常把这类的组件注册为全局组件。
+注册全局组件的好处是什么那：只需要注册一次，可以在程序任意地方使用
+
+注意2:咱们经常把项目中共用的全局组件放置于components里面，以后需要注意，
+项目当中全局组件（共用的组件）一般放置于components文件夹中
+
+注意3：全局组件只需要注册一次，就可以在项目当中任意的地方使用，注册全局组件一般是在入口文件注册。
+
+
+
+2)组件name属性的作用?
+
+2.1开发者工具中可以看见组件的名字
+2.2注册全局组件的时候，可以通过组件实例获取相应组件的名字
+
+
+
+## 开发listContainer|Floor组件业务
+
+接下来需要开发listContainer与floor组件
+场景:开发项目，产品经理画出原型，前端与后端人员需要介入（开发项目），
+leader（老大）刚开完会，前端与后端负责哪些模块，后端人员（....开发服务器），
+前端人员【项目起步、开发静态页面、查分静态组件】，回首一看回台‘哥哥’，接口没有写好，
+向这种情况，前端人员可以mock一些数据【前端程序员自己模拟的一些假的接口】，当中工作中项目上线，需要把mock
+数据变为后台哥哥给的接口数据替换。
+
+mock数据。
+
+注意：因为后台老师没有给我们写好其他接口【老师们特意的：因为就是想练习mock数据】
+但是项目中mock数据，你就把他当中真实接口数据用就行。
+
+注意：mock（模拟数据）数据需要使用到mockjs模块，可以帮助我们模拟数据。
+注意：mockjs【并非mock.js mock-js】
+http://mockjs.com/  官方地址
+
+```bash
+cnpm i mockjs --save
+```
+
+第一步:安装依赖包mockjs
+
+第二部：在src文件夹下创建一个文件夹，文件夹mock文件夹。
+
+第三步:准备模拟的数据
+把mock数据需要的图片放置于public文件夹中！
+比如:listContainer中的轮播图的数据
+
+```
+[
+   {id:1,imgUrl:'xxxxxxxxx'}, 
+   {id:2,imgUrl:'xxxxxxxxx'}, 
+   {id:3,imgUrl:'xxxxxxxxx'}, 
+]
+```
+
+第四步：在mock文件夹中创建一个server.js文件
+注意：在server.js文件当中对于banner.json||floor.json的数据没有暴露，但是可以在server模块中使用。
+对于webpack当中一些模块：图片、json，不需要对外暴露，因为默认就是对外暴露。
+
+
+第五步:通过mock模块模拟出数据
+
+通过Mock.mock方法进行模拟数据
+
+第六步:回到入口文件，引入serve.js
+mock需要的数据|相关mock代码页书写完毕，关于mock当中serve.js需要执行一次，
+如果不执行，和你没有书写一样的。
+
+
+
+第七步:在API文件夹中创建mockRequest【axios实例：baseURL:'/mock'】
+专门获取模拟数据用的axios实例。
+
+在开发项目的时候：切记，单元测试，某一个功能完毕，一定要测试是否OK
+
+
+
+## swiper基本的使用
+
+8.1:swiper可以在移动端使用？还是PC端使用？
+答：swiper移动端可以使用，pc端也可以使用。
+
+8.2:swiper常用于哪些场景？
+常用的场景即为轮播图----【carousel:轮播图】
+swiper最新版本为7版本的，项目当中使用的是5版本
+
+https://www.swiper.com.cn/ 官网地址
+
+```bash
+cnpm i swiper@6 --save
 ```
 
