--- a/面试学习题目/前端面试_12_算法与手写题部分.md
+++ b/面试学习题目/前端面试_12_算法与手写题部分.md
@@ -1905,3 +1905,69 @@ have a rest
 */
 ```
 
+#### 13.2 实现 Eventemitter 类，有on、emit、off 方法
+
+**参考答案：**
+
+1. on(event,fn)：监听event事件，事件触发时调用fn函数；
+2. once(event,fn)：为指定事件注册一个单次监听器，单次监听器最多只触发一次，触发后立即解除监听器；
+3. emit(event,arg1,arg2,arg3...)：触发event事件，并把参数arg1,arg2,arg3....传给事件处理函数；
+4. off(event,fn)：停止监听某个事件
+
+```js
+class EventEmitter{
+    constructor(){
+        this._events={};
+    }
+    on(event,callback){  //监听event事件，触发时调用callback函数
+        let callbacks=this._events[event] || [];
+        callbacks.push(callback);
+        return this;
+    }
+    off(event,callback){  //停止监听event事件
+        let callbacks=this._events[event];
+        this._events[event]=callbacks && callbacks.filter(fn=>fn!==callback);
+        return this;
+    }
+    emit(...args){  //触发事件，并把参数传给事件的处理函数
+        const event=args[0];
+        const params=[].slice.call(args,1);
+        const callbacks=this._events[event];
+        callbacks.forEach(fn=>fn.apply(this.params));
+        return this;
+    }
+    once(event,callback){  //为事件注册单次监听器
+        let wrapFanc=(...args)=>{
+            callback.apply(this.args);
+            this.off(event,wrapFanc);
+        }
+        this.on(event,wrapFanc);
+        return this;
+    }
+}
+```
+
+------
+
+#### 13.3 查找给定的两个节点的第一个公共父节点
+
+**参考答案**：
+
+**解题思路**
+
+递归循环树的节点，因二叉树不能重复的特性,当前节点为 p or q ，返回当前节点 父节点循环中，如果找到一个，则查找其他子树 其他子树没有找到另外一个，就证明当前节点为找到的子树是最近公共祖先 两个都找到了，对应当前节点是两个节点的父节点这种情况，则返回当前节点。 代码
+
+```js
+var lowestCommonAncestor = function(root, p, q) {
+	if (!root || root === p || root === q) return root
+    let left = lowestCommonAncestor(root.left, p, q)
+    let right = lowestCommonAncestor(root.right, p, q)
+    if (!left) return right
+    if (!right) return left
+    return root
+};
+```
+
+-----
+
+###  
