--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -7075,6 +7075,53 @@ console.log(result);
 
 
 
+----
+
+## 324. 摆动排序 II
+
+给你一个整数数组 nums，将它重新排列成 nums[0] < nums[1] > nums[2] < nums[3]... 的顺序。
+
+你可以假设所有输入数组都可以得到满足题目要求的结果。
+
+提示：
+
+1 <= nums.length <= 5 * 104
+0 <= nums[i] <= 5000
+题目数据保证，对于给定的输入 nums ，总能产生满足题目要求的结果
+
+进阶：你能用 O(n) 时间复杂度和 / 或原地 O(1) 额外空间来实现吗？
+
+
+
+要参考摆动数组
+
+```
+/**
+ * @param {number[]} nums
+ * @return {void} Do not return anything, modify nums in-place instead.
+ */
+var wiggleSort = function(nums) {
+    const arr = [...nums];
+    arr.sort((a, b) => a - b);
+    const n = nums.length;
+    const x = Math.floor((n + 1) / 2);
+    for (let i = 0, j = x - 1, k = n - 1; i < n; i += 2, j--, k--) {
+        nums[i] = arr[j];
+        if (i + 1 < n) {
+            nums[i + 1] = arr[k];
+        }
+    }
+};
+
+let nums = [1,5,1,1,6,4];
+wiggleSort(nums)
+console.log(nums);
+```
+
+
+
+
+
 
 ---
 ## 326. 3 的幂
@@ -11960,6 +12007,64 @@ var findLUSlength = function(a, b) {
 ```
 
 ---
+
+## 522. 最长特殊序列 II
+
+给定字符串列表 strs ，返回其中 最长的特殊序列 。如果最长特殊序列不存在，返回 -1 。
+
+特殊序列 定义如下：该序列为某字符串 独有的子序列（即不能是其他字符串的子序列）。
+
+ s 的 子序列可以通过删去字符串 s 中的某些字符实现。
+
+例如，"abc" 是 "aebdc" 的子序列，因为您可以删除"aebdc"中的下划线字符来得到 "abc" 。"aebdc"的子序列还包括"aebdc"、 "aeb" 和 "" (空字符串)。
+
+
+提示:
+
+2 <= strs.length <= 50
+1 <= strs[i].length <= 10
+strs[i] 只包含小写英文字母
+
+```js
+/**
+ * @param {string[]} strs
+ * @return {number}
+ */
+var findLUSlength = function(strs) {
+    const n = strs.length;
+    let ans = -1;
+    for (let i = 0; i < n; i++) {
+        let check = true;
+        for (let j = 0; j < n; j++) {
+            if (i !== j && isSubseq(strs[i], strs[j])) {
+                check = false;
+                break;
+            }
+        }
+        if (check) {
+            ans = Math.max(ans, strs[i].length);
+        }
+    }
+    return ans;
+};
+
+//判断是否能成为子串
+const isSubseq = (s, t) => {
+    let i = 0;
+    let j = 0;
+    while(i< s.length && j < t.length) {
+        if (s[i] === t[j]) {
+            i++;
+        }
+        j++;
+    }
+    return i === s.length;
+}
+```
+
+
+
+----
 
 ## 530. 二叉搜索树的最小绝对差
 
