--- a/面试学习题目/前端笔试面经题目.md
+++ b/面试学习题目/前端笔试面经题目.md
@@ -1064,3 +1064,35 @@ console.log(result);
 
 ---
 
+## 粉刷墙壁
+
+最近小明搬到了新家，他正在粉刷墙壁，但是不幸的是他粉刷的墙壁并不理想。他的墙壁是一个长度为 ![img](https://www.nowcoder.com/equation?tex=%5Cmathit%20n)的格子，每个格子用0表示红色，用1表示蓝色。现在墙壁是一个非常混乱的颜色。他想将墙壁涂成左边全是蓝色右边全是红色，可以将墙壁刷成全是红色或者蓝色。请问他至少需要粉刷多少个格子墙壁刷成他想要的样子？
+
+```js
+function solution(strs, n) {
+    let minValue = n;
+    let left = 0, right = 0;
+    for (let i = 0; i < n; i++){
+        if (strs[i] === "1") {
+            right++;
+        }
+    }
+    for (let i = 0; i <= n; i++) {
+        if (i > 0) {
+            if (strs[i - 1] === "0") {
+                left++;
+            } else {
+                right--;
+            }
+        }
+        minValue = Math.min(minValue, left + right);
+    }
+    return minValue;
+}
+
+
+let n = parseInt(readline());
+let strs = readline();
+console.log(solution(strs, n));
+```
+
