--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -6299,6 +6299,82 @@ var deleteNode = function(node) {
 
 
 ---
+## 241. 为运算表达式设计优先级
+
+给你一个由数字和运算符组成的字符串 expression ，按不同优先级组合数字和运算符，计算并返回所有可能组合的结果。你可以 按任意顺序 返回答案。
+
+生成的测试用例满足其对应输出值符合 32 位整数范围，不同结果的数量不超过 104 。
+
+```
+const ADDITION = -1;
+const SUBTRACTION = -2;
+const MULTIPLICATION = -3;
+
+var diffWaysToCompute = function(expression) {
+    const ops = [];
+    for (let i = 0; i < expression.length;) {
+        if (!isDigit(expression[i])) {
+            if (expression[i] === '+') {
+                ops.push(ADDITION);
+            } else if (expression[i] === '-') {
+                ops.push(SUBTRACTION);
+            } else {
+                ops.push(MULTIPLICATION);
+            }
+            i++;
+        } else {
+            let t = 0;
+            while (i < expression.length && isDigit(expression[i])) {
+                t = t * 10 + expression[i].charCodeAt() - '0'.charCodeAt();
+                i++;
+            }
+            ops.push(t);
+        }
+    }
+    const dp = new Array(ops.length).fill(0).map(() => new Array(ops.length).fill(0));
+    for (let i = 0; i < ops.length; i++) {
+        for (let j = 0; j < ops.length; j++) {
+            dp[i][j] = [];
+        }
+    }
+    return dfs(dp, 0, ops.length - 1, ops);
+};
+
+const dfs = (dp, l, r, ops) => {
+    if (dp[l][r].length === 0) {
+        if (l == r) {
+            dp[l][r].push(ops[l]);
+        } else {
+            for (let i = l; i < r; i += 2) {
+                const left = dfs(dp, l, i, ops);
+                const right = dfs(dp, i + 2, r, ops);
+                for (const lv of left) {
+                    for (const rv of right) {
+                        if (ops[i + 1] === ADDITION) {
+                            dp[l][r].push(lv + rv);
+                        } else if (ops[i + 1] === SUBTRACTION) {
+                            dp[l][r].push(lv - rv);
+                        } else {
+                            dp[l][r].push(lv * rv);
+                        }
+                    }
+                }
+            }
+        }
+    }
+    return dp[l][r];
+}
+
+const isDigit = (ch) => {
+    return parseFloat(ch).toString() === "NaN" ? false : true;
+}
+
+```
+
+
+
+----
+
 ## 242.  有效的字母异位词
 
 给定两个字符串 s 和 t ，编写一个函数来判断 t 是否是 s 的字母异位词。
@@ -8354,6 +8430,72 @@ console.log(lastRemaining(50));
 
 
 - 空间复杂度：O(1)。只需要使用常数的额外空间。
+
+---
+
+## 391. 完美矩形
+
+给你一个数组 rectangles ，其中 rectangles[i] = [xi, yi, ai, bi] 表示一个坐标轴平行的矩形。这个矩形的左下顶点是 (xi, yi) ，右上顶点是 (ai, bi) 。
+
+如果所有矩形一起精确覆盖了某个矩形区域，则返回 true ；否则，返回 false 。
+提示：
+
+1 <= rectangles.length <= 2 * 104
+rectangles[i].length == 4
+-105 <= xi, yi, ai, bi <= 105
+
+```js
+/**
+ * @param {number[][]} rectangles
+ * @return {boolean}
+ */
+var isRectangleCover = function(rectangles) {
+    let area = 0;
+    let minX = rectangles[0][0], minY = rectangles[0][1], maxX = rectangles[0][2], maxY = rectangles[0][3];
+    const cnt = new Map();
+    for (const rect of rectangles) {
+        const x = rect[0], y = rect[1], a = rect[2], b = rect[3];
+        area += (a - x) * (b - y);
+
+        minX = Math.min(minX, x);
+        minY = Math.min(minY, y);
+        maxX = Math.max(maxX, a);
+        maxY = Math.max(maxY, b);
+
+        cnt.set([x, y].toString(), (cnt.get([x, y].toString()) || 0) + 1);
+        cnt.set([x, b].toString(), (cnt.get([x, b].toString()) || 0) + 1);
+        cnt.set([a, y].toString(), (cnt.get([a, y].toString()) || 0) + 1);
+        cnt.set([a, b].toString(), (cnt.get([a, b].toString()) || 0) + 1);
+    }
+    
+    const pointMinMin = [minX, minY].toString();
+    const pointMinMax = [minX, maxY].toString();
+    const pointMaxMin = [maxX, minY].toString();
+    const pointMaxMax = [maxX, maxY].toString();
+    if (area !== (maxX - minX) * (maxY - minY) || (cnt.get(pointMinMin) || 0) !== 1 || (cnt.get(pointMinMax) || 0) !== 1 || (cnt.get(pointMaxMin) || 0) !== 1 || (cnt.get(pointMaxMax) || 0) !== 1) {
+        console.log(cnt.get([minX, minY].toString()))
+        return false;
+    }
+
+    cnt.delete(pointMinMin);
+    cnt.delete(pointMinMax);
+    cnt.delete(pointMaxMin);
+    cnt.delete(pointMaxMax);
+
+    for (const [_, value] of cnt.entries()) {
+        if (value !== 2 && value !== 4) {
+            
+            return false;
+        }
+    }
+    
+    return true;
+};
+
+
+```
+
+
 
 
 ---
@@ -17703,6 +17845,65 @@ console.log(result);
 
 **普通闰年:公历年份是4的倍数的，一般是闰年。（如2004年就是闰年）；
 世纪闰年:公历年份是整百数的，必须是400的倍数才是闰年（如1900年不是世纪闰年，2000年是世纪闰年）；**
+
+----
+
+## 1175. 质数排列
+
+请你帮忙给从 1 到 n 的数设计排列方案，使得所有的「质数」都应该被放在「质数索引」（索引从 1 开始）上；你需要返回可能的方案总数。
+
+让我们一起来回顾一下「质数」：质数一定是大于 1 的，并且不能用两个小于它的正整数的乘积来表示。
+
+由于答案可能会很大，所以请你返回答案 模 mod 10^9 + 7 之后的结果即可。
+
+
+提示：
+
+1 <= n <= 100
+
+```js
+/**
+ * @param {number} n
+ * @return {number}
+ */
+
+const MOD = 1000000007;
+var numPrimeArrangements = function(n) {
+    let numPrimes = 0;
+    for (let i = 2; i <= n; i++) {
+        if (isPrime(i)) {
+            numPrimes++;
+        }
+    }
+    let res = 1;
+    let m = n - numPrimes;
+    while(numPrimes > 0) {
+        res = res % MOD;
+        res *= numPrimes;
+        numPrimes--;
+    }
+    while (m > 0) {
+        res = res % MOD;
+        res *= m;
+        m--;
+    }
+    return res;
+};
+
+const isPrime = (n) => {
+    if (n === 1) {
+        return false;
+    }
+    for (let i = 2; i * i <= n; i++) {
+        if (n % i === 0) {
+            return false;
+        }
+    }
+    return true;
+}
+```
+
+
 
 
 ---
