--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -12657,6 +12657,46 @@ let result=optimalDivision(test);
 console.log(result);
 ```
 
+----
+
+## 556. 下一个更大元素 III
+
+给你一个正整数 n ，请你找出符合条件的最小整数，其由重新排列 n 中存在的每位数字组成，并且其值大于 n 。如果不存在这样的正整数，则返回 -1 。
+
+注意 ，返回的整数应当是一个 32 位整数 ，如果存在满足题意的答案，但不是 32 位整数 ，同样返回 -1 。
+
+```
+const MAX = 2147483647;
+var nextGreaterElement = function(n) {
+    const nums = [...('' + n)];
+    let i = nums.length - 2;
+    while (i >= 0 && nums[i] >= nums[i + 1]) {
+        i--;
+    }
+    if (i < 0) {
+        return -1;
+    }
+
+    let j = nums.length - 1;
+    while (j >= 0 && nums[i] >= nums[j]) {
+        j--;
+    }
+    [nums[i], nums[j]] = [nums[j], nums[i]];
+    reverse(nums, i + 1);
+    const ans = 0 + nums.join('');
+    return ans > MAX ? -1 : ans;
+};
+
+const reverse = (nums, begin) => {
+    let i = begin, j = nums.length - 1;
+    while (i < j) {
+        [nums[i], nums[j]] = [nums[j], nums[i]];
+        i++;
+        j--;
+    }
+}
+```
+
 
 
 
@@ -16047,6 +16087,68 @@ var binaryGap = function(n) {
 
 
 ---
+## 871. 最低加油次数
+
+汽车从起点出发驶向目的地，该目的地位于出发位置东面 target 英里处。
+
+沿途有加油站，每个 station[i] 代表一个加油站，它位于出发位置东面 station[i][0] 英里处，并且有 station[i][1] 升汽油。
+
+假设汽车油箱的容量是无限的，其中最初有 startFuel 升燃料。它每行驶 1 英里就会用掉 1 升汽油。
+
+当汽车到达加油站时，它可能停下来加油，将所有汽油从加油站转移到汽车中。
+
+为了到达目的地，汽车所必要的最低加油次数是多少？如果无法到达目的地，则返回 -1 。
+
+注意：如果汽车到达加油站时剩余燃料为 0，它仍然可以在那里加油。如果汽车到达目的地时剩余燃料为 0，仍然认为它已经到达目的地。
+
+```
+var minRefuelStops = function(target, startFuel, stations) {
+    const n = stations.length;
+    const dp = new Array(n + 1).fill(0);
+    dp[0] = startFuel;
+    for (let i = 0; i < n; i++) {
+        for (let j = i; j >= 0; j--) {
+            if (dp[j] >= stations[i][0]) {
+                dp[j + 1] = Math.max(dp[j + 1], dp[j] + stations[i][1]);
+            }
+        }
+    }
+    for (let i = 0; i <= n; i++) {
+        if (dp[i] >= target) {
+            return i;
+        }
+    }
+    return -1;
+};
+
+
+```
+
+```
+class Solution:
+    def minRefuelStops(self, target: int, startFuel: int, stations: List[List[int]]) -> int:
+        n = len(stations)
+        ans, fuel, prev, h = 0, startFuel, 0, []
+        for i in range(n + 1):
+            curr = stations[i][0] if i < n else target
+            fuel -= curr - prev
+            while fuel < 0 and h:
+                fuel -= heappop(h)
+                ans += 1
+            if fuel < 0:
+                return -1
+            if i < n:
+                heappush(h, -stations[i][1])
+                prev = curr
+        return ans
+
+
+```
+
+
+
+-----
+
 ## 875. 爱吃香蕉的珂珂
 
 珂珂喜欢吃香蕉。这里有 n 堆香蕉，第 i 堆中有 piles[i] 根香蕉。警卫已经离开了，将在 h 小时后回来。
