--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -18151,6 +18151,38 @@ console.log(result);
 
 
 
+-----
+
+## 1200. 最小绝对差
+
+给你个整数数组 arr，其中每个元素都 不相同。
+
+请你找到所有具有最小绝对差的元素对，并且按升序的顺序返回。
+
+```js
+/**
+ * @param {number[]} arr
+ * @return {number[][]}
+ */
+var minimumAbsDifference = function(arr) {
+    arr.sort((a, b) => a - b);
+    let ans = [[arr[0], arr[1]]];
+    let minDiff = arr[1] - arr[0];
+    for (let i = 1; i < arr.length - 1; i++) {
+        let diff = arr[i + 1] - arr[i];
+        if (diff === minDiff) {
+            ans.push([arr[i], arr[i + 1]]);
+        } else if (diff < minDiff) {
+            ans = [[arr[i], arr[i + 1]]];
+            minDiff = diff;
+        }
+    }
+    return ans;
+};
+```
+
+
+
 
 ---
 ## 1219. 黄金矿工
