--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -14902,6 +14902,80 @@ console.log(result);
 
 
 ---
+## 729. 我的日程安排表 I
+
+实现一个 MyCalendar 类来存放你的日程安排。如果要添加的日程安排不会造成 重复预订 ，则可以存储这个新的日程安排。
+
+当两个日程安排有一些时间上的交叉时（例如两个日程安排都在同一时间内），就会产生 重复预订 。
+
+日程可以用一对整数 start 和 end 表示，这里的时间是半开区间，即 [start, end), 实数 x 的范围为，  start <= x < end 。
+
+实现 MyCalendar 类：
+
+MyCalendar() 初始化日历对象。
+boolean book(int start, int end) 如果可以将日程安排成功添加到日历中而不会导致重复预订，返回 true 。否则，返回 false 并且不要将该日程安排添加到日历中。
+
+```js
+var MyCalendar = function() {
+    this.tree = new Set();
+    this.lazy = new Set();
+};
+
+/** 
+ * @param {number} start 
+ * @param {number} end
+ * @return {boolean}
+ */
+MyCalendar.prototype.book = function(start, end) {
+    if (this.query(start, end - 1, 0, 1000000000, 1)) {
+        return false;
+    }
+    this.update(start, end - 1, 0, 1000000000, 1);
+    return true;
+};
+
+MyCalendar.prototype.query = function(start, end, l, r, idx) {
+    if (start > r || end < l) {
+        return false;
+    }
+    /* 如果该区间已被预订，则直接返回 */
+    if (this.lazy.has(idx)) {
+        return true;
+    }
+    if (start <= l && r <= end) {
+        return this.tree.has(idx);
+    } else {
+        const mid = (l + r) >> 1;
+        if (end <= mid) {
+            return this.query(start, end, l, mid, 2 * idx);
+        } else if (start > mid) {
+            return this.query(start, end, mid +1, r, 2 * idx + 1);
+        } else {
+            return this.query(start, end, l, mid, 2 * idx) | this.query(start, end, mid + 1, r, 2 * idx + 1);
+        }
+    }
+}
+
+MyCalendar.prototype.update = function(start, end, l, r, idx) {
+    if (r < start || end < l) {
+        return;
+    }
+    if (start <= l && r <= end) {
+        this.tree.add(idx);
+        this.lazy.add(idx);
+    } else {
+        const mid = (l + r) >> 1;
+        this.update(start, end, l, mid, 2 * idx);
+        this.update(start, end, mid + 1, r, 2 * idx + 1);
+        this.tree.add(idx);
+    }
+}
+```
+
+
+
+----
+
 ## 730. 统计不同回文子序列
 
 给定一个字符串 s，返回 s 中不同的非空「回文子序列」个数 。
