--- a/面试学习题目/前端面试_15_计算机基础部分.md
+++ b/面试学习题目/前端面试_15_计算机基础部分.md
@@ -411,6 +411,118 @@ free(buffer);
 
 ---
 
+## 死锁是什么？死锁产生的原因和必要条件
+
+一、死锁概念
+死锁是指两个或多个进程在执行的过程中，**因为竞争资源而造成互相等待的现象**，若无外力作用，它们都无法推进下去。
+
+当进程需要以独占的方式访问资源时，可能会发生死锁（Deadlock）。死锁是指两个或以上进程因竞争临界资源而造成的一种僵局，即一个进程等待一个已经被占用且永不释放的资源。若无外力作用，这些进程都无法向前推进。
+
+**产生死锁的根本原因**是系统能够提供的资源个数比要求该资源的进程数要少。
+
+**产生死锁的基本原因**可以分为两类：资源竞争和进程推进顺序不合理。
+
+1.在等待对方时占有不可抢占的资源
+举个例子，假设有P1，P2两个进程，都需要A和B两个资源，两个都等待另一个资源而不肯释放资源，就这样无限等待中，这就形成死锁。这只是死锁的一种情况，就是在等待对方时占有不可抢占的资源。
+2.竞争可消耗资源引起死锁
+有P1，P2，P3三个进程，P1向P2发送消息并接受P3消息，P2向P3发送消息并接受P2消息，P3向P1发送消息并接受P2消息，如果设置是先接到消息后发送消息，则所有的消息都不能发送，也造成了死锁。
+3.进程推进顺序不当引起死锁
+有进程P1，P2，都需要资源A,B，本来可以P1运行A，P1运行B，P2运行B，P2运行A，P2运行B，但顺序换了，P1运行A时P2运行B，容易引发死锁，属于第一种的资源抢占问题。
+
+二、产生死锁的四个必要条件
+1.互斥条件
+**一个资源每次只能被一个进程使用**，即在一段时间内某资源仅为一个进程所使用。此时如果有其他进程请求该资源，则请求进程只能等待。
+
+2.占有并等待（部分分配）
+**进程中已经保持了至少一个资源，但又提出了新的资源请求，而该资源已经被其他进程占有**，此时请求进程被阻塞，但对自己已经获得资源保持不放。
+
+3.不可剥夺条件
+**进程未使用完的资源在未使用完毕之前，不能被其他进程强行夺走**，即只能由获得该资源的进程自己来释放。
+
+4.循环等待条件
+**若干进程间形成首尾相接循环等待资源的关系**。在发生死锁时必然存在一个进程等待队列{P1，P2，…,Pn},其中P1等待P2占有的资源，P2等待P3占有的资源，…，Pn等待P1占有的资源，形成一个进程等待环路，环路中每一个进程所占有的资源同时被另一个申请。
+
+注意：**这四个条件是死锁的必然条件，只要系统发生死锁，这些条件必然成立**。只要有上述条件有一条不满足，就不会发生死锁。
+
+三、死锁的预防
+我们可以通过破坏产生死锁的四个必要条件来预防死锁，由于资源互斥是固有特性无法改变的。
+1.**破坏“请求与保持”条件**
+方法一：静态分配，每个进程在开始执行时就申请他所需要的全部资源。
+方法二：动态分配，每个进程在申请所需要的资源时他本身不占用系统资源。
+2.**破坏“不可剥夺”条件**
+一个进程不可获得其所需要的全部资源便处于等待状态，等待期间他占用的资源将被隐式的释放重新加入到系统的资源列表中，可以被其他进程使用，而等待的进程只有重新获得自己原有的资源以及新申请的资源才可以重新启动，执行。
+3.**破坏“循环等待”条件**
+采用资源有序分配的基本思想。将系统中的资源顺序进行编号，将紧缺的、稀少的资源采用较大的编号，申请资源时必须按照编号的顺序执行，一个进程只有较小编号的进程才能申请较大编号的进程。
+
+- **预防死锁**
+
+通过设置一些限制条件，破坏死锁的四个必要条件中的一个或几个，让死锁无法发生。
+
+例如，将资源分层，得到上一层资源后才能够申请下一层资源，这样就破坏了环路等待条件。用户申请资源时，要求一次性申请所需要的全部资源，这就破坏了占有并等待条件。当一个已经占有某些不可剥夺资源的进程，请求新的资源而得不到满足时，它必须释放已经占有的所有资源，待以后需要时再重新申请，这就破坏了不剥夺条件。
+
+这些预防死锁的方法破坏了系统的并行性和并发性，通常会降低系统的效率。
+
+- **避免死锁**
+
+该方法同样属于事先预防，但它并不事先采取各种限制措施去破坏产生死锁的四个必要条件，而是在动态分配资源的过程中，用一些算法来防止系统进入不安全状态，避免死锁的发生。
+
+具体策略如下：
+
+\1. 如果进程请求的资源会导致死锁，系统就拒绝启动该进程；
+
+\2. 如果对一个资源的分配会导致下一步的死锁，系统就拒绝本次分配；
+
+显然要避免死锁，系统必须事先知道所拥有的资源数量及其属性。
+
+一个著名的避免死锁的算法是银行家算法。
+
+银行家算法是DijkstraE W于1968年提出的。之所以称为银行家算法，是因为该算法可用于银行系统。
+
+所谓银行家算法，是指分配资源之前先确定资源分配是否会造成系统死锁。如果会死锁，则不分配，只有确认不会死锁后才进行分配。
+
+银行家算法，需要按如下原则判断是否分配资源：
+
+- 新进程进入系统时，它必须说明对各类资源的最大需求量，这一数量不能超过系统的资源总数。只有满足这一条件系统才接纳该进程。
+
+- 当进程申请一组资源时，该算法需要检查进程对各类资源的最大需求量，如果系统现存的各类资源的数量可以满足此时的资源最大需求量时，就分配资源；否则进程必须等待，直到其他进程释放足够的资源为止。
+- 进程需要在一定时间内无条件地归还它所申请的全部资源。
+
+- **死锁的检测及解除**
+
+  死锁预防和避免都是对资源分配进行适当限制，属于事前措施，并不利于系统资源的充分共享。而死锁检测不会试图阻止死锁，即在死锁发生前不会做任何操作，只是通过设 置的检测机制，检测当前是否发生死锁。若发生死锁，则采取一些措施来 解除死锁。
+
+  判断死锁的法则主要基于第四条死锁的必要条件：
+
+- 资源分配路径中没有环路，则系统不会出现死锁
+- 资源分配路径中存在环路，则系统可能出现死锁
+- 如果环路中的每个资料类中都只有一个资源，则系统存在死锁
+- 如果环路中的每个资源类的资源个数不止一个，则环路的存在是产生死锁的必要条件但不是充分条件
+
+解除死锁的方法 包括资源剥夺法、进程撤销法、进程回退法、系统重启法等：
+
+- 资源剥夺法
+
+剥夺陷入死锁的进程所占用的资源，但并不撤销此进程，再将这些资源分配给需要的进程，直至死锁解除。
+
+- 进程撤销法
+
+- 一次性撤销陷入死锁的所有进程，回收所有占用的资源，等死锁解除后，再重新运行进程。
+- 逐个撤销陷入死锁的进程，依次回收其资源并重新分配，直至死锁解除。可以优先撤销优先级低、预计剩余执行时间最长、CPU消耗时间少的进程。
+
+- 进程回退法
+
+让所有的进程回退到系统保存的检查点，这种方法要求系统建立并保存检查点、建立回退机制。
+
+- 系统重启法
+
+  结束所有进程并重启系统。这种方法很简单，但损失很大，先前的工作可能都浪费了。
+
+
+
+
+
+
+
 
 
 
@@ -463,19 +575,19 @@ Server 层按顺序执行 SQL 的步骤为：
 
 是指在关系模型中，**对于添加的一个规范要求，所有的域都应该是原子性的**，即数据库表的每一列都是不可分割的原子数据项，而不能是集合，数组，记录等非原子数据项。
 
-即实体中的某个属性有多个值时，必须拆分为不同的属性。在符合第一范式表中的每个域值只能是实体的一个属性或一个属性的一部分。简而言之，第一范式就是无重复的域。
+**即实体中的某个属性有多个值时，必须拆分为不同的属性**。在符合第一范式表中的每个域值只能是实体的一个属性或一个属性的一部分。简而言之，**第一范式就是无重复的域**。
 
 **第二范式（2NF）：**
 
-在1NF的基础上，非主码属性必须完全依赖于候选码（在1NF基础上消除非主属性对主码的部分函数依赖）。
+在1NF的基础上，**非主码属性必须完全依赖于候选码**（在1NF基础上消除非主属性对主码的部分函数依赖）。
 
-第二范式是在第一范式的基础上建立起来的，即满足第二范式必须先满足第一范式。**第二范式要求数据库表中的每个实例或记录必须可以被唯一地区分。**选取一个能区分每个实体的属性或属性组，作为实体的唯一标识。
+第二范式是在第一范式的基础上建立起来的，即满足第二范式必须先满足第一范式。**第二范式要求数据库表中的每个实例或记录必须可以被唯一地区分。**选取一个能区分每个实体的属性或属性组，**作为实体的唯一标识**。
 
 例如在员工表中的身份证号码即可实现每个一员工的区分，该身份证号码即为候选键，任何一个候选键都可以被选作主键。在找不到候选键时，可额外增加属性以实现区分，如果在员工关系中，没有对其身份证号进行存储，而姓名可能会在数据库运行的某个时间重复，无法区分出实体时，设计辟如ID等不重复的编号以实现区分，被添加的编号或ID选作主键。
 
 **第三范式（3NF）：**
 
-在2NF基础上，任何非主属性不依赖于其它非主属性（在2NF基础上消除传递依赖）。
+在2NF基础上，**任何非主属性不依赖于其它非主属性**（在2NF基础上消除传递依赖）。
 
 第三范式是第二范式的一个子集，即满足第三范式必须满足第二范式。简而言之，第三范式要求一个关系中不包含已在其它关系已包含的非主关键字信息。
 
