--- a/面试学习题目/前端面试面经题目.md
+++ b/面试学习题目/前端面试面经题目.md
@@ -905,3 +905,25 @@ var deleteMiddle = function(head) {
 如何检测注入
 
 git merge 和 git rebase的区别
+
+
+
+---
+
+## 帆软
+
+30分钟
+
+如何实现0.5px边框
+
+样式权重，优先级
+
+输入框宽度随输入自适应
+
+setTimeout的替代方法
+
+Vue路由两种模式实现原理的区别
+
+场景应用题
+
+如何选择一个合适的其他js应用库
