--- a/Vue/尚品汇项目学习笔记.md
+++ b/Vue/尚品汇项目学习笔记.md
@@ -922,5 +922,32 @@ cnpm i element-ui -S
 
 
 
+## 开发详情业务
+
+熟悉静态页面、书写样式
+拆分组件
+获取服务器动态展示
+完成动态业务
 
 
+
+滚动行为的设置。
+
+注意
+在工作中假报错现象很常见，因为什么导致的，尽可能解决掉-----【不解决掉对于你的程序没有任何影响】
+
+
+
+## 放大镜的功能
+
+----插件:插件解决可以【巧劲】
+
+5.1遮罩层为什么能动。
+获取节点（DOM：必须要定位），通过JS动态修改left|top、定位元素才有left、top属性
+
+
+
+
+
+6)产品个数业务
+以后项目当中：凡是出现文本框【用户输入：一定有'幺蛾子',思考情况一定要多思考】
